--- a/BBApp/templates/BBApp/votaciones/votaciones_create.html
+++ b/BBApp/templates/BBApp/votaciones/votaciones_create.html
@@ -2,7 +2,10 @@
 {% block content %}
 
 <form method="post">{% csrf_token %}
-    {{ form.as_p }}
+    {{ form.usuario }}
+    {{ form.cerveza }}
+    {{ form.pub }}
+    {{ form.voto }}
     <input type="submit" value="Save">
 </form>
 {% endblock %}
