--- a/BBApp/templates/BBApp/votaciones/votaciones_list.html
+++ b/BBApp/templates/BBApp/votaciones/votaciones_list.html
@@ -4,7 +4,7 @@
     <h2>Votaciones</h2>
     <ul>
         {% for vot in object_list %}
-            <li>{{ vot.usuario  }} - {{ vot.voto  }} - {{ vot.cerveza  }} - {{ vot.pub  }}</li>
+            <li>{{ vot.user  }} - {{ vot.voto  }} - {{ vot.cerveza  }} - {{ vot.pub  }}</li>
         {% endfor %}
     </ul>
 {% endblock %}
