--- a/BBApp/templates/base.html
+++ b/BBApp/templates/base.html
@@ -1,9 +1,36 @@
 {% load static %}
-<html>
-<head>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    {% load static %}
+    <meta charset="utf-8" />
+
+    <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
+         Remove this if you use the .htaccess -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <title>{% block title %}{% endblock %}</title>
-</head>
-<body>
-    {% block content %}{% endblock %}
-</body>
-</html>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" media="screen" />
+    <style>
+      body { padding-top: 70px; padding-bottom: 70px; }
+      {% block css %}{% endblock %}
+    </style>
+  </head>
+
+  <body>
+  
+    <div class="container">
+      <div class="row">
+        {% block head %}{% endblock %}
+      </div>
+      <div class="row">
+        <div class="col-sm-8">
+          {% block content %}{% endblock %}
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript">
+      {% block javascript %}{% endblock %}
+    </script>
+  </body>
