--- a/BBApp/templates/base.html
+++ b/BBApp/templates/base.html
@@ -1,26 +1,26 @@
 {% load static %}
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    {% load static %}
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
 
-    <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-         Remove this if you use the .htaccess -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" media="screen" />
-    <style>
-      body { padding-top: 70px; padding-bottom: 70px; }
-      {% block css %}{% endblock %}
-    </style>
+    <title>{% block head_title %}{% endblock %}BEST-BEER</title>
+
+ {% include "head_css.html" %}
   </head>
 
   <body>
-  
-    <div class="container">
+
+   {% include "navbar.html" %}
+
+    <main role="main" class="container">
+      <div class="jumbotron">
+
+        <div class="container">
       <div class="row">
         {% block head %}{% endblock %}
       </div>
@@ -33,4 +33,22 @@
     <script type="text/javascript">
       {% block javascript %}{% endblock %}
     </script>
+
+      </div>
+    </main>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="{% static 'js/jquery-slim.min.js' %}"><\/script>')</script>
+    <script src="{% static 'js/assets_js_vendor_popper.min.js' %}"></script>
+    <script src="{% static 'js/dist_js_bootstrap.min.js' %}"></script>
+  
+
   </body>
+</html>
+
+
+  
+
