Buen apretón. Ficheros estáticos e Interfaz de usuario_mejoras

--- a/BBApp/templates/signup.html
+++ b/BBApp/templates/signup.html
@@ -22,7 +22,7 @@
     <p>Estado Civil</p>
     {{ form.estado_civil }}
 
-    <p>Contraseña</p>
+    <p>Contraseña (solo contraseñas seguras)</p>
     {{ form.password1 }}
 
      <p>Confirmación de Contraseña</p>
