--- a/BBApp/templates/BBApp/votaciones/votaciones_create.html
+++ b/BBApp/templates/BBApp/votaciones/votaciones_create.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
+
 {% block content %}
 
 <form method="post">{% csrf_token %}
-    {{ form.voto }}
-    {{ form.cerveza }}
-    {{ form.pub }}
+    {{ form.as_p }}
     <input type="submit" value="Save">
 </form>
 {% endblock %}
