--- a/BBApp/templates/BBApp/votaciones/votaciones_list.html
+++ b/BBApp/templates/BBApp/votaciones/votaciones_list.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
-
 {% block content %}
-    <h2>Votaciones</h2>
+    <h2>The Beest Beer!</h2>
     <ul>
         {% for vot in object_list %}
             <li>{{ vot.usuario }} - {{ vot.voto  }} - {{ vot.cerveza  }} - {{ vot.pub  }}</li>
