--- a/BBApp/templates/navbar.html
+++ b/BBApp/templates/navbar.html
@@ -1,4 +1,21 @@
- <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+ {% if request.user.is_staff %}
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+      <a class="navbar-brand" href="{% url 'home' %}">BEEST-BEER</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'cervezas_create' %}">Añadir Cervezas <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'pubs_create' %}">Añadir Pubs</a>
+          </li>
+         
+        </ul>
+  {% else %}
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
       <a class="navbar-brand" href="#">BEST-BEER</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,19 +25,15 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'votaciones_list' %}">Top Cervezas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'pubs_list' %}">Pubs</a>
-          </li>
         </ul>
+            {% endif %}     
 
   <ul class="navbar-right navbar-nav mr-auto">
   {% if user.is_authenticated %}
 
             <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Salir</a></li>
             {% else %}
+             <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Acceso</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Registrarte</a></li>
             {% endif %}     
 </ul>
