--- a/BBApp/templates/base.html
+++ b/BBApp/templates/base.html
@@ -16,7 +16,6 @@
   <body>
 
    {% include "navbar.html" %}
-
     <main role="main" class="container">
       <div class="jumbotron">
 
@@ -33,8 +32,16 @@
     <script type="text/javascript">
       {% block javascript %}{% endblock %}
     </script>
-
       </div>
+      <div>
+     <img width="88" src="{% static 'img/1.png' %}"/>
+     <img width="88" src="{% static 'img/2.png' %}"/>
+     <img width="88" src="{% static 'img/5.png' %}"/>
+     <img width="88" src="{% static 'img/6.jpg' %}"/>
+     <img width="88" src="{% static 'img/7.jpg' %}"/>
+     <img width="88"src="{% static 'img/9.jpg' %}"/>
+     <img width="88" src="{% static 'img/33.jpg' %}"/>
+     </div>
     </main>
 
     <!-- Bootstrap core JavaScript
