Beest-Beer-V2-Alpha: Retoques diseño

--- a/BBApp/templates/BBApp/votaciones/votaciones_create.html
+++ b/BBApp/templates/BBApp/votaciones/votaciones_create.html
@@ -12,9 +12,9 @@
     {{ votaciones.cerveza }}
     {{ votaciones.pub }}
 
-
     <input type="submit" value="Save">
         </div>
+<p>Introduce un valor del 0 al 5</p>
 
 </form>
 {% endblock %}
