Best-Beer V2.1: Mejoras de seguridad

--- a/BBApp/templates/BBApp/cervezas/cervezas_list.html
+++ b/BBApp/templates/BBApp/cervezas/cervezas_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>Cervezas</h2>
-    <table class=".table">
+    <table class="table table-dark">
       <tr>
 
         {% for cer in object_list %}
