--- a/BBApp/templates/base.html
+++ b/BBApp/templates/base.html
@@ -43,7 +43,8 @@
      <img width="88" src="{% static 'img/33.jpg' %}"/>
      <br />
      <br />
-     <p align="center">BeestBeer V2 Alpha Edition</p>
+     <p align="center">Best-Beer V2.1 Alpha Edition</p>
+          <img width="111" src="{% static 'img/giphy.gif' %}"/>
      <p align="center">© 2018 Evaristo R</p>
      </div>
     </main>
