--- a/BBApp/templates/navbar.html
+++ b/BBApp/templates/navbar.html
@@ -11,13 +11,13 @@
         <ul id="menu" class="navbar-nav mr-auto">
           <li class="nav-item" class="active">
             <a class="nav-link" href="{% url 'cervezas_create' %}">Añadir Cervezas <span class="sr-only">(current)</span></a>
-         
+         </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'pubs_create' %}">Añadir Pubs</a>
+            </li>
                <li><a class="nav-link" href="{% url 'cervezas_list' %}">Ver Cervezas</a> </li>
-          </li>
             <li><a class="nav-link" href="{% url 'pubs_list' %}">Ver Pubs</a> </li>
-          </li>
+            <li><a class="nav-link" href="{% url 'usuarios_list' %}">Ver Usuarios</a> </li>
          
         </ul>
   {% else %}
