--- a/BBApp/templates/BBApp/votaciones/votaciones_create.html
+++ b/BBApp/templates/BBApp/votaciones/votaciones_create.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
- <h2>Votando a tu cerveza, como {{ request.user }}</h2>
+ <h2>Votando a tu cerveza, como {{ request.user }} (Del 0 al 5)</h2>
 
-<form class="form-inline" method="post">{% csrf_token %}
+<form  method="post">{% csrf_token %}
 <div class="form-group">
 
     
@@ -14,7 +14,6 @@
 
     <input type="submit" value="Save">
         </div>
-<p>Introduce un valor del 0 al 5</p>
 
 </form>
 {% endblock %}
