--- a/BBApp/templates/BBApp/votaciones/votaciones_list.html
+++ b/BBApp/templates/BBApp/votaciones/votaciones_list.html
@@ -3,7 +3,7 @@
     <h2>The Beest Beer!</h2>
   
 
-      <table class="table table-dark">
+      <table class="table-responsive table-dark">
      
    {% for vot in object_list %}
     <tr>
