--- a/BBApp/templates/BBApp/votaciones/votaciones_list.html
+++ b/BBApp/templates/BBApp/votaciones/votaciones_list.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2>The Beest Beer!</h2>
+    <h2 align="center">The Beest Beer!</h2>
   
 
-      <table class="table-responsive table-dark">
+      <table class="table-responsive table-dark table-hover">
      
    {% for vot in object_list %}
     <tr>
