Best-Beer V2.1: Mejoras de Interfaz

--- a/BBApp/templates/BBApp/cervezas/cervezas_list.html
+++ b/BBApp/templates/BBApp/cervezas/cervezas_list.html
@@ -8,7 +8,7 @@
        
 <td>
              <img width="100" src="{{ cer.foto.url }}">
-             <p align="center">{{ cer.nombre_cerveza  }} </p>
+             <p align="center"> {{ cer.pk }} {{ cer.nombre_cerveza  }} </p>
         {% endfor %}
            </td>
       </tr>
