--- a/BBApp/templates/navbar.html
+++ b/BBApp/templates/navbar.html
@@ -18,7 +18,9 @@
                <li><a class="nav-link" href="{% url 'cervezas_list' %}">Ver Cervezas</a> </li>
             <li><a class="nav-link" href="{% url 'pubs_list' %}">Ver Pubs</a> </li>
             <li><a class="nav-link" href="{% url 'usuarios_list' %}">Ver Usuarios</a> </li>
-         
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'votaciones_list' %}">Top Cervezas <span class="sr-only">(current)</span></a>
+          </li>
         </ul>
   {% else %}
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
