--- a/BBApp/templates/navbar.html
+++ b/BBApp/templates/navbar.html
@@ -43,7 +43,7 @@
 
   <ul class="navbar-right navbar-nav mr-auto">
   {% if user.is_authenticated %}
-
+ <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">{{ request.user }}</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Salir</a></li>
             {% else %}
              <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Acceso</a></li>
