--- a/BBApp/templates/login.html
+++ b/BBApp/templates/login.html
@@ -15,4 +15,7 @@
 <a href="https://bestbeer.duckdns.org/openid/login">Acceder con OpenID</a>
 <br />
 <a href="{% url 'social:begin' 'github' %}">Acceder con Github</a>
+<br />
+<a href="{% url 'social:begin' 'facebook' %}">Acceder con Facebook</a>
+
 {% endblock %}
