--- a/BBApp/templates/navbar.html
+++ b/BBApp/templates/navbar.html
@@ -3,7 +3,7 @@
 {% if request.user.is_staff %}
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-      <a class="navbar-brand" href="{% url 'home' %}"> <img align="center" width="46" src="{% static 'img/beer.png' %}"/></a>
+      <a class="navbar-brand" href="{% url 'home' %}"><img align="center" width="46" src="{% static 'img/beer.png' %}"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,11 +31,11 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Votar Cerveza <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'crearVoto' %}">Votar Cerveza <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'votaciones_list' %}">Top Cervezas <span class="sr-only">(current)</span></a>
-          </li>
+          </li>        
         </ul>
             {% endif %}     
   
