--- a/BBApp/templates/BBApp/votaciones/votaciones_list.html
+++ b/BBApp/templates/BBApp/votaciones/votaciones_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2 align="center">The Beest Beer!</h2>
+    <h2 align="center">Las mejores cervezas son:</h2>
   
 
       <table class="table-responsive table-dark table-hover">
