--- a/BBApp/templates/navbar.html
+++ b/BBApp/templates/navbar.html
@@ -4,7 +4,8 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
       <a class="navbar-brand" href="{% url 'home' %}"><img align="center" width="46" src="{% static 'img/beer.png' %}"/></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+<a class="navbar-brand" href="{% url 'home' %}"><h2>Best-Beer</h2></a>      
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -24,7 +25,8 @@
         </ul>
   {% else %}
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-      <a class="navbar-brand" href="{% url 'home' %}"> <img align="center" width="46" src="{% static 'img/beer.png' %}"/></a>
+      <a class="navbar-brand" href="{% url 'home' %}"><img align="center" width="46" src="{% static 'img/beer.png' %}"/></a>
+      <a class="navbar-brand" href="{% url 'home' %}"><h2>Best-Beer</h2></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
