--- a/BBApp/templates/base.html
+++ b/BBApp/templates/base.html
@@ -33,7 +33,7 @@
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="http://evaristo.duckdns.org/";
+    var u="https://evaristo.duckdns.org/";
     _paq.push(['setTrackerUrl', u+'piwik.php']);
     _paq.push(['setSiteId', '1']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
