--- a/BBApp/templates/base.html
+++ b/BBApp/templates/base.html
@@ -40,7 +40,7 @@
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<noscript><p><img src="http://evaristo.duckdns.org/piwik.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p></noscript>
+<noscript><p><img src="https://evaristo.duckdns.org/piwik.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p></noscript>
 <!-- End Matomo Code -->
 {% analytical_head_bottom %}
 
